# DavidOelfke

./: .eslintrc.js  .gitignore  .prettierrc  README.md  jest.config.js  next-sitemap.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.json
__mocks__/: nextFontGoogleMock.js
api/: .env.example  .gitignore  README.md  __init__.py  config.py  education.py  index.py  main.py  pyproject.toml  requirements.txt  technologies.py  work_history.py
api/models/: base.py
api/routers/: health.py
public/: robots.txt  site.webmanifest
src/components/card/: Card.module.scss  Card.tsx
src/components/chat/: Chat.module.scss  Chat.tsx
src/components/layout/: globals.css  index.module.scss  index.test.tsx  index.tsx
src/components/navigation/: Navigation.module.scss  Navigation.test.tsx  Navigation.tsx
src/components/page/: Page.module.scss  Page.test.tsx  Page.tsx
src/components/page-title/: PageTitle.module.scss  PageTitle.test.tsx  PageTitle.tsx
src/components/tag/: Tag.module.scss  Tag.test.tsx  Tag.tsx  Tags.test.tsx  Tags.tsx
src/data/: tech.test.ts  tech.ts  workHistory.test.ts  workHistory.ts
src/pages/: _app.tsx  about-me.module.scss  about-me.tsx  about.tsx  blog.module.scss  blog.tsx  chat.tsx  globals.css  index.module.scss  index.tsx  my-education.tsx  my-work.module.scss  my-work.tsx  sitemap.xml.ts
src/pages/api/: og-image.ts  og-image.tsx  rss.ts
src/services/: contentful-service.test.ts  contentful-service.ts
src/types/: blogPost.ts
src/utils/: blogUtils.test.ts  blogUtils.ts  dateUtils.test.ts  dateUtils.ts
(+8 files in other folders)
